[DBGHELP] Restrict the Clang workaround in r64203. Fixes CORE-9084. Many thanks to David Quintana and The Arty for their help. Dedicated to Jim ;)

svn path=/trunk/; revision=66076